Customization - Added Typography
Customization  - Added font family and adapted Landing page typography

--- a/vita/app/globals.css
+++ b/vita/app/globals.css
@@ -13,6 +13,7 @@ border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
+font-family: ;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
@@ -37,4 +38,5 @@ border-collapse: collapse;
 border-spacing: 0;
 }
 /* fin del reseet css*/
+
 
