--- a/vita/app/globals.css
+++ b/vita/app/globals.css
@@ -13,7 +13,7 @@ border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
-font-family: ;
+font-family: sans-serif;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
