--- a/vita/app/globals.css
+++ b/vita/app/globals.css
@@ -53,6 +53,17 @@ select:-webkit-autofill:focus {
   transition: background-color 5000s ease-in-out 0s;
 }
 
+.button-flag {
+  background: transparent !important ;
+  border: none !important;
+}
+
+.button-flag:hover .button-flag:focus .selected-flag:hover .selected-flag:focus {
+  background: transparent !important ;
+  border: none !important;
+}
+
+
 /* fin del reseet css*/
 
 
